--- a/OperacoesJS.html
+++ b/OperacoesJS.html
@@ -15,6 +15,7 @@
   <button onclick="realizarOperacao('soma')">Somar</button>
   <button onclick="realizarOperacao('divisao')">Dividir</button>
   <button onclick="realizarOperacao('multiplicacao')">Multiplicar</button>
+  <button onclick="realizarOperacao('subtracao')">Subtrair</button>
 
   <h1 id="resultado">Resultado: </h1>
 
